--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
   "dependencies": {
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^10.0.0",
+    "axios": "^1.7.3",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "handlebars": "^4.7.8",
     "mongoose": "^8.5.1",
     "nodemailer": "^6.9.14",
