--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.0.0",
-    "@angular/cdk": "^15.0.4",
+    "@angular/cdk": "^15.2.9",
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
     "@angular/forms": "^15.0.0",
-    "@angular/material": "^15.0.4",
+    "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
@@ -24,6 +24,9 @@
     "apexcharts": "^3.35.3",
     "bootstrap": "^5.3.3",
     "ng-apexcharts": "1.7.1",
+    "pdfmake": "^0.2.10",
+    "jspdf": "^2.5.1",
+    "html2pdf.js": "^0.10.1",
     "rxjs": "~7.5.0",
     "sass": "^1.57.1",
     "tslib": "^2.3.0",
@@ -35,6 +38,7 @@
     "@angular/compiler-cli": "^15.0.0",
     "@types/date-fns": "^2.6.0",
     "@types/jasmine": "~4.3.0",
+    "@types/pdfmake": "^0.2.9",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
